edited styling on several pages

--- a/css/css/main.css
+++ b/css/css/main.css
@@ -86,19 +86,11 @@ header {
 
 .navbar {
     background-color: black; 
+    border-radius: 0px; 
 }
 
 .navbar a {
     color: white;
-}
-
-/*section - regions of world*/
-section a, a:hover {
-    color: black;
-}
-
-.row {
-    padding-bottom: 20px; 
 }
 
 /*footer*/
@@ -113,6 +105,35 @@ footer a:hover {
 
 .navbar-static-bottom li {
     display: inline;
+}
+
+/*section & articles*/
+section a, a:hover {
+    color: black;
+}
+
+.row {
+    padding-bottom: 20px; 
+}
+
+.CountryPages img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 20px;
+    padding-top: 20px; 
+}
+
+.CountryPages p {
+    padding-bottom: 30px;
+}
+
+.SidebySide {
+    text-align: center; 
+}
+
+.SidebySide img {
+    display: inline-block;
 }
 
 /*.navbar-static-bottom ul {
