--- a/css/main.css
+++ b/css/main.css
@@ -61,13 +61,14 @@ body {
 
 body, html {
     height: 100%;
+    width: 100%
 }
 
 /*main - including settings for h#*/
 h2 {
     font-size: 2em;
     text-align: center;
-    padding: 20px 0px;
+    padding: 2% 0%;
 }
 
 h3 {
@@ -76,21 +77,20 @@ h3 {
 
 main {
     display: block;
-    padding-bottom: 60px;
+    padding-bottom: 5%;
 }
 
 /*header*/ 
 header {
-    height: 150px; 
+    height: 20%; 
 }
-
 .navbar-brand {
     font-size: 3em; 
-    padding-top: 30px;
+    padding-top: 3%;
 }
 
 .container .navbar-nav {
-    padding-top: 30px; 
+    padding-top: 3%;
 }
 
 .navbar-default .navbar-brand {
@@ -104,7 +104,6 @@ header {
 
 .container .navbar-nav a, i{
     display: inline;
-    padding: 0px 3px 0px 3px;
 }
 
 .container .navbar-nav li a {
@@ -117,14 +116,17 @@ header {
 }
 
 /*header and footer*/
+footer .glyphicon {
+    padding: 0% 0.3% 0% 1%;
+}
+
 .glyphicon {
-    padding: 0px 3px 0px 10px;
     color: white;
 }
 
 .navbar {
     background-color: black; 
-    border-radius: 0px; 
+    border-radius: 0%; 
 }
 
 .navbar a {
@@ -142,7 +144,7 @@ footer a:hover {
 }
 
 .navbar-static-bottom {
-    padding: 15px 0px 0px 0px;
+    padding: 1.2% 0% 0% 0%;
     margin-bottom: 0;
 }
 
@@ -162,7 +164,7 @@ section a, a:hover {
 }
 
 .row {
-    padding-bottom: 20px; 
+    padding-bottom: 1.6%; 
 }
 
 .side-side {
@@ -170,8 +172,8 @@ section a, a:hover {
 }
 
 .country-page figcaption {
-    padding-bottom: 20px; 
-    padding-top: 3px;
+    padding-bottom: 1.6%; 
+    padding-top: 0.3%;
     text-align: center;
     font-style: italic; 
 }
@@ -180,32 +182,59 @@ section a, a:hover {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 5px; 
+    padding-top: 0.4%; 
 }
 
 .country-page p {
-    padding-bottom: 30px;
+    padding-bottom: 2.4%;
 }
 
 .side-side img {
     display: inline-block;
-    width:  300px;
-    height: 350px;
+    width:  23.7%;
+    height: 27.7%;
 }
 
 /*Forms*/
 textarea {
-    width: 300px;
-    height: 200px;
+    width: 23.7%;
+    height: 0;
+    padding-bottom: 50%;
 }
 
 textarea, input {
-    margin: 0px 0px 10px 0px;
+    margin: 0% 0% 0.79% 0%;
 }
 
 label, textarea, input {
     display: block;
 }
 
+@media screen and (max-width: 991px){
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+section a{
+    text-align: center;
+}
+
+section h3 {
+    padding-top: 1%;
+    padding-bottom: 2%;
+}
+
+.row {
+    padding-bottom: 0;
+}
+}
+
+@media screen and (max-width: 767px) {
+.container .navbar-right {
+    display: none;
+}
+}
 
 
