--- a/css/main_source.css
+++ b/css/main_source.css
@@ -1,108 +1,10 @@
 
-/*html & body settings*/
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    position: relative; 
-}
 
-body, html {
-    height: 100%;
-    width: 100%
-}
 
-/*main - including settings for h#*/
-h2 {
-    font-size: 2em;
-    text-align: center;
-    padding: 2% 0%;
-}
 
-h3 {
-    font-size: 1em;
-}
 
-main {
-    display: block;
-    padding-bottom: 5%;
-}
 
-/*header*/ 
-header {
-    height: 20%; 
-}
-.navbar-brand {
-    font-size: 3em; 
-    padding-top: 3%;
-}
 
-.container .navbar-nav {
-    padding-top: 3%;
-}
-
-.navbar-default .navbar-brand {
-    color: white;
-}
-
-.navbar-default .navbar-brand:hover {
-    color: white;
-    text-decoration: underline; 
-}
-
-.container .navbar-nav a, i{
-    display: inline;
-}
-
-.container .navbar-nav li a {
-    color: white;
-}
-
-.container .navbar-nav li a:hover {
-    color: white;
-    text-decoration: underline; 
-}
-
-/*header and footer*/
-footer .glyphicon {
-    padding: 0% 0.3% 0% 1%;
-}
-
-.glyphicon {
-    color: white;
-}
-
-.navbar {
-    background-color: black; 
-    border-radius: 0%; 
-}
-
-.navbar a {
-    color: white;
-}
-
-/*footer*/
-footer a:hover {
-    color: white;
-}
-
-.about-contact {
-    position: relative;
-    min-height: 100%;
-}
-
-.navbar-static-bottom {
-    padding: 1.2% 0% 0% 0%;
-    margin-bottom: 0;
-}
-
-.navbar-static-bottom li {
-    display: inline;
-}
-
-#about-page, #contact-page {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-}
 
 /*section & articles*/
 section a, a:hover {
@@ -124,9 +26,9 @@ section a, a:hover {
     font-style: italic; 
 }
 
-/*img {
+img {
     max-width: 100%;
-}*/
+}
 
 .country-page img {
     display: block;
