--- a/css/main_updated.css
+++ b/css/main_updated.css
@@ -35,4 +35,147 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+h2, .country-page figcaption, .side-side {
+  text-align: center; }
+
+/* html and body*/
+html {
+  width: 100%;
+  height: 100%; }
+
+body {
+  width: 100%;
+  height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  position: relative; }
+
+/*main & h#*/
+h2 {
+  font-size: 2em;
+  padding: 2% 0%; }
+
+h3 {
+  font-size: 1em; }
+
+main {
+  display: block;
+  padding-bottom: 5%; }
+
+/*header*/
+header {
+  height: 20%; }
+
+.navbar-brand {
+  font-size: 3em;
+  padding-top: 3%; }
+  .navbar-default .navbar-brand {
+    color: white; }
+    .navbar-default .navbar-brand:hover {
+      color: white;
+      text-decoration: underline; }
+
+.container .navbar-nav {
+  padding-top: 3%; }
+  .container .navbar-nav a, .container .navbar-nav i {
+    display: inline; }
+  .container .navbar-nav li a {
+    color: white; }
+    .container .navbar-nav li a:hover {
+      color: white;
+      text-decoration: underline; }
+
+@media screen and (max-width: 767px) {
+  .container .navbar-right {
+    display: none; } }
+
+/*header and footer*/
+.glyphicon {
+  color: white; }
+  footer .glyphicon {
+    padding: 0% 0.3% 0% 1%; }
+
+.navbar {
+  background-color: black;
+  border-radius: 0%; }
+  .navbar a {
+    color: white; }
+
+/*footer*/
+footer a:hover {
+  color: white; }
+
+.about-contact {
+  position: relative;
+  min-height: 100%; }
+
+.navbar-static-bottom {
+  padding: 1.2% 0% 0% 0%;
+  margin-bottom: 0; }
+  .navbar-static-bottom li {
+    display: inline; }
+
+#about-page, #contact-page {
+  position: absolute;
+  bottom: 0;
+  width: 100%; }
+
+/*content*/
+img {
+  max-width: 100%; }
+  @media screen and (max-width: 991px) {
+    img {
+      display: block;
+      margin-left: auto;
+      margin-right: auto; } }
+
+section a {
+  color: black; }
+  @media screen and (max-width: 991px) {
+    section a {
+      text-align: center; } }
+  section a:hover {
+    color: black; }
+
+@media screen and (max-width: 991px) {
+  section h3 {
+    padding-top: 1%;
+    padding-bottom: 2%; } }
+
+.row {
+  padding-bottom: 1.6%; }
+  @media screen and (max-width: 991px) {
+    .row {
+      padding-bottom: 0; } }
+
+.country-page figcaption {
+  padding-bottom: 1.6%;
+  padding-top: 0.3%;
+  font-style: italic; }
+.country-page img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 0.4%;
+  width: 25%;
+  height: 30%; }
+.country-page p {
+  padding-bottom: 2.4%; }
+
+.side-side img {
+  display: inline-block;
+  width: 25%;
+  height: 30%; }
+
+/*Forms*/
+textarea {
+  width: 40%;
+  height: 0%;
+  padding-bottom: 20%; }
+
+textarea, input {
+  margin: 0% 0% 0.79% 0%; }
+
+label, textarea, input {
+  display: block; }
+
 /*# sourceMappingURL=main_updated.css.map */
