--- a/scss/main_updated.scss
+++ b/scss/main_updated.scss
@@ -1,6 +1,3 @@
-//imports
-@import "partials/reset"; 
-
 //extends
 %text-align {
     text-align: center;
@@ -60,59 +57,52 @@ main {
 /*header*/ 
 header {
     height: 20%; 
+    padding-top: 3%;
 }
 
-.navbar-brand {
+header .title {
     font-size: 3em; 
-    padding-top: 3%;
-    .navbar-default & {
+    text-decoration: none;
+    @include color;
+    &:hover {
         @include color;
-        &:hover {
-            @include color;
-            text-decoration: underline; 
-        }
+        text-decoration: underline; 
     }
 }
 
-.container .navbar-nav {
-    padding-top: 3%;
-    a, i {
-        @include display(inline);
-    }
-    li a {
-        @include color;
-        &:hover {
-            @include color;
-            text-decoration: underline; 
-        }
-    }
-}
-
+/*
 .container .navbar-right {
     @include respond-to(max-width, 767px) {
         @include display(none);
     }
-}
+}*/
 
 /*header and footer*/
-.glyphicon {
-    @include color;
-    footer & {
-        padding: 0% 0.3% 0% 1%;
+header, footer {
+    background-color: black; 
+    li {
+        @include display(inline-block);
+        padding: 0% 5% 0% 5%;
+        margin: 0 5% 0% 5%;
+    }
+    a {
+        @include color;
+        text-decoration: none;
+        &:hover {
+            text-decoration: underline; 
+        }
     }
 }
 
-.navbar {
-    background-color: black; 
-    border-radius: 0%; 
-    a {
-        @include color;
-    }
+header ul {
+    float: right;
+    list-style-type:none;
 }
 
 /*footer*/
-footer a:hover {
-    @include color;
+footer {
+    bottom: 0;
+    width: 100%;
 }
 
 .about-contact {
@@ -120,13 +110,7 @@ footer a:hover {
     min-height: 100%;
 }
 
-.navbar-static-bottom {
-    padding: 1.2% 0% 0% 0%;
-    margin-bottom: 0;
-    li {
-        @include display(inline);
-    }
-}
+
 
 #about-page, #contact-page {
     position: absolute;
