--- a/scss/main_updated.scss
+++ b/scss/main_updated.scss
@@ -1,6 +1,3 @@
-//imports
-@import "partials/reset"; 
-
 //extends
 %text-align {
     text-align: center;
@@ -31,21 +28,59 @@
 }
 
 /* html and body*/
-html {
+html, body {
     @include dimensions;
 }
 
 body {
-    @include dimensions;
     font-family: Arial, Helvetica, sans-serif;
-    position: relative; 
+}
+
+/*header and footer*/
+header, footer {
+    background-color: black; 
+    li {
+        @include display(inline);
+    }
+    a {
+        @include color;
+        padding: 0.5em;
+        text-decoration: none;
+        &:hover {
+            text-decoration: underline; 
+        }
+    }
+}
+
+/*header*/ 
+header {
+    height: 20%; 
+    padding-top: 3%;
+    .title {
+        font-size: 3em; 
+        text-decoration: none;
+        @include color;
+        &:hover {
+            @include color;
+            text-decoration: underline; 
+        }
+    }
+    li {
+        @include respond-to(max-width, 767px) {
+            @include display(none);
+        }
+    }
+    ul {
+        float: right;
+        list-style-type: none;
+    }
 }
 
 /*main & h#*/
 h2 {
     font-size: 2em;
     @extend %text-align;
-    padding: 2% 0%;
+    padding: 0.5em 0%;
 }
 
 h3 {
@@ -53,85 +88,8 @@ h3 {
 }
 
 main {
-    @include display;
+    min-height: 74%;
     padding-bottom: 5%;
-}
-
-/*header*/ 
-header {
-    height: 20%; 
-}
-
-.navbar-brand {
-    font-size: 3em; 
-    padding-top: 3%;
-    .navbar-default & {
-        @include color;
-        &:hover {
-            @include color;
-            text-decoration: underline; 
-        }
-    }
-}
-
-.container .navbar-nav {
-    padding-top: 3%;
-    a, i {
-        @include display(inline);
-    }
-    li a {
-        @include color;
-        &:hover {
-            @include color;
-            text-decoration: underline; 
-        }
-    }
-}
-
-.container .navbar-right {
-    @include respond-to(max-width, 767px) {
-        @include display(none);
-    }
-}
-
-/*header and footer*/
-.glyphicon {
-    @include color;
-    footer & {
-        padding: 0% 0.3% 0% 1%;
-    }
-}
-
-.navbar {
-    background-color: black; 
-    border-radius: 0%; 
-    a {
-        @include color;
-    }
-}
-
-/*footer*/
-footer a:hover {
-    @include color;
-}
-
-.about-contact {
-    position: relative;
-    min-height: 100%;
-}
-
-.navbar-static-bottom {
-    padding: 1.2% 0% 0% 0%;
-    margin-bottom: 0;
-    li {
-        @include display(inline);
-    }
-}
-
-#about-page, #contact-page {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
 }
 
 /*content*/
@@ -146,11 +104,13 @@ img {
 
 section a {
     @include color(black);
+    text-decoration: none;
     @include respond-to(max-width, 991px) {
         @include text-align;
     }
     &:hover {
         @include color(black);
+        text-decoration: underline; 
     }
 }
 
@@ -193,6 +153,19 @@ section h3 {
     @include display(inline-block);
     @include dimensions(25%, 30%);
     }
+}
+
+/*footer*/
+footer {
+    position: relative;
+    min-height: 6%;
+    padding-top: 1em;
+} 
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 
 /*Forms*/
