updated templates, created routes, updated scss structure

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,176 +1,152 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Home|My Travels</title>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/grid/simple-grid.css">
-    <link rel="stylesheet" href="css/main_updated.css">
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <a href="index.html" class="title"> My Travels</a>
-        <ul>
-          <li><a href="html/about/index.html">About</a></li>
-          <li><a href="html/contact/index.html">Contact</a></li>
-        </ul> 
-      </div> 
-    </header> 
-    <main>
-      <div class="container">
-        <section>
-          <div class="row">
+{% extends "base.html" %}
+
+{% block content %}
+  <main>
+    <div class="container">
+      <section>
+        <div class="row">
+          <div class="col-12">
+            <h2>Asia</h2>
+          </div>
+        </div>
+        <div class="row">
+          <article>
             <div class="col-12">
-              <h2>Asia</h2>
+              <a href="html/india/index.html">
+                <img src="images/india/india_golden_temple.jpeg" alt="Golden Temple in India">
+                <h3>India</h3> 
+              </a>
             </div>
+          </article> 
+        </div> 
+      </section>
+      <section>
+        <div class="row">
+          <div class="col-12">
+            <h2>Americas</h2>
           </div>
-          <div class="row">
-            <article>
-              <div class="col-12">
-                <a href="html/india/index.html">
-                  <img src="images/india/india_golden_temple.jpeg" alt="Golden Temple in India">
-                  <h3>India</h3> 
-                </a>
-              </div>
-            </article> 
-          </div> 
-        </section>
-        <section>
-          <div class="row">
-            <div class="col-12">
-              <h2>Americas</h2>
+        </div>
+        <div class="row">      
+          <article>       
+            <div class="col-4">
+              <a href="html/argentina/index.html">
+                <img src="images/argentina/argentina_la_boca.jpeg" alt="La Boca Neighborhood in Buenos Aires">
+                <h3>Argentina</h3>
+              </a>
             </div>
-          </div>
-          <div class="row">      
-            <article>       
-              <div class="col-4">
-                <a href="html/argentina/index.html">
-                  <img src="images/argentina/argentina_la_boca.jpeg" alt="La Boca Neighborhood in Buenos Aires">
-                  <h3>Argentina</h3>
-                </a>
-              </div>
-            </article>
-            <article>   
-              <div class="col-4"> 
-                <a href="html/canada/index.html">
-                  <img src="images/canada/canada_vancouver_skyline.jpeg" alt="Vancouver Skyline">
-                  <h3>Canada</h3>
-                </a>
-              </div>
-            </article>
-            <article>
-              <div class="col-4">
-                <a href="html/uruguay/index.html">
-                  <img src="images/uruguay/uruguay_plaza_independencia.jpeg" alt="Plaza Independencia in Montevideo, Uruguay">
-                  <h3>Uruguay</h3>
-                </a>
-              </div> 
-            </article>
-          </div> 
-        </section>
-        <section>
-          <div class="row">
-            <div class="col-12"> 
-              <h2>Europe (yes, I'm including the UK)</h2>
+          </article>
+          <article>   
+            <div class="col-4"> 
+              <a href="html/canada/index.html">
+                <img src="images/canada/canada_vancouver_skyline.jpeg" alt="Vancouver Skyline">
+                <h3>Canada</h3>
+              </a>
             </div>
+          </article>
+          <article>
+            <div class="col-4">
+              <a href="html/uruguay/index.html">
+                <img src="images/uruguay/uruguay_plaza_independencia.jpeg" alt="Plaza Independencia in Montevideo, Uruguay">
+                <h3>Uruguay</h3>
+              </a>
+            </div> 
+          </article>
+        </div> 
+      </section>
+      <section>
+        <div class="row">
+          <div class="col-12"> 
+            <h2>Europe (yes, I'm including the UK)</h2>
           </div>
-          <div class="row">
-            <article>
-              <div class="col-4">
-                <a href="html/france/index.html">
-                  <img src="images/france/france_eiffel.jpeg" alt="Eiffel Tower">
-                  <h3>France</h3>
-                </a>
-              </div>  
-            </article>
-            <article>
-              <div class="col-4">  
-                <a href="html/germany/index.html">
-                  <img src="images/germany/germany_brandenburg_gate.jpeg" alt="Brandenburg Gate in Berlin">
-                  <h3>Germany</h3>
-                </a>
-              </div>
-            </article>
-            <article>  
-              <div class="col-4"> 
-                <a href="html/greece/index.html">
-                  <img src="images/greece/greece_acropolis_1.jpeg" alt="Image of Acropolis in Rhodes, Greece">
-                  <h3>Greece</h3>
-                </a>
-              </div>
-            </article>
-          </div> 
-          <div class="row"> 
-            <article>
-              <div class="col-4">     
-                <a href="html/ireland/index.html">
-                  <img src="images/ireland/ireland_guinness_copy.jpeg" alt="Image of Guinness factory in Dublin">
-                  <h3>Ireland</h3>
-                </a>
-              </div>
-            </article>  
-            <article> 
-              <div class="col-4">
-                <a href="html/italy/index.html">
-                  <img src="images/italy/italy_pisa.jpeg" alt="Leaning tower of Pisa">
-                  <h3>Italy</h3>
-                </a>
-              </div>
-            </article>
-            <article>   
-              <div class="col-4"> 
-                <a href="html/netherlands/index.html">
-                  <img src="images/netherlands/netherlands_kinderdijk.jpeg" alt="Windmills of Kinderdijk, in Holland">
-                  <h3>The Netherlands</h3>
-                </a>
-              </div>
-            </article>
-          </div>   
-          <div class="row"> 
-            <article>
-              <div class="col-4"> 
-                <a href="html/spain/index.html">
-                  <img src="images/spain/spain_sagrada_familia_1.jpeg" alt="Sagrada Familia in Barcelona">
-                  <h3>Spain</h3>
-                </a>
-              </div>
-            </article>
-            <article> 
-              <div class="col-4">   
-                <a href="html/uk/index.html">
-                  <img src="images/uk/uk_tower_bridge.jpeg" alt="Tower Bridge in London">
-                  <h3>United Kingdom</h3>
-                </a> 
-              </div>
-            </article> 
-          </div>  
-        </section>
-        <section>
-          <div class="row"> 
-            <div class="col-12">
-              <h2>Northern Africa</h2>
+        </div>
+        <div class="row">
+          <article>
+            <div class="col-4">
+              <a href="html/france/index.html">
+                <img src="images/france/france_eiffel.jpeg" alt="Eiffel Tower">
+                <h3>France</h3>
+              </a>
+            </div>  
+          </article>
+          <article>
+            <div class="col-4">  
+              <a href="html/germany/index.html">
+                <img src="images/germany/germany_brandenburg_gate.jpeg" alt="Brandenburg Gate in Berlin">
+                <h3>Germany</h3>
+              </a>
             </div>
+          </article>
+          <article>  
+            <div class="col-4"> 
+              <a href="html/greece/index.html">
+                <img src="images/greece/greece_acropolis_1.jpeg" alt="Image of Acropolis in Rhodes, Greece">
+                <h3>Greece</h3>
+              </a>
+            </div>
+          </article>
+        </div> 
+        <div class="row"> 
+          <article>
+            <div class="col-4">     
+              <a href="html/ireland/index.html">
+                <img src="images/ireland/ireland_guinness_copy.jpeg" alt="Image of Guinness factory in Dublin">
+                <h3>Ireland</h3>
+              </a>
+            </div>
+          </article>  
+          <article> 
+            <div class="col-4">
+              <a href="html/italy/index.html">
+                <img src="images/italy/italy_pisa.jpeg" alt="Leaning tower of Pisa">
+                <h3>Italy</h3>
+              </a>
+            </div>
+          </article>
+          <article>   
+            <div class="col-4"> 
+              <a href="html/netherlands/index.html">
+                <img src="images/netherlands/netherlands_kinderdijk.jpeg" alt="Windmills of Kinderdijk, in Holland">
+                <h3>The Netherlands</h3>
+              </a>
+            </div>
+          </article>
+        </div>   
+        <div class="row"> 
+          <article>
+            <div class="col-4"> 
+              <a href="html/spain/index.html">
+                <img src="images/spain/spain_sagrada_familia_1.jpeg" alt="Sagrada Familia in Barcelona">
+                <h3>Spain</h3>
+              </a>
+            </div>
+          </article>
+          <article> 
+            <div class="col-4">   
+              <a href="html/uk/index.html">
+                <img src="images/uk/uk_tower_bridge.jpeg" alt="Tower Bridge in London">
+                <h3>United Kingdom</h3>
+              </a> 
+            </div>
+          </article> 
+        </div>  
+      </section>
+      <section>
+        <div class="row"> 
+          <div class="col-12">
+            <h2>Northern Africa</h2>
           </div>
-          <div class="row">
-            <article>
-              <div class="col-4"> 
-                <a href="html/egypt/index.html">
-                  <img src="images/egypt/egypt_pyramid_copy.jpeg" alt="Pyramids of Giza">
-                  <h3>Egypt</h3>
-                </a>
-              </div>
-            </article>
-          </div>  
-        </section> 
-      </div>
-    </main> 
-    <footer>
-      <div class="footer">
-        <ul>
-          <li><a href="html/about/index.html">About</a></li>
-          <li><a href="html/contact/index.html">Contact</a></li>
-        </ul>  
-      </div> 
-    </footer>
-  </body>
-</html> 
+        </div>
+        <div class="row">
+          <article>
+            <div class="col-4"> 
+              <a href="html/egypt/index.html">
+                <img src="images/egypt/egypt_pyramid_copy.jpeg" alt="Pyramids of Giza">
+                <h3>Egypt</h3>
+              </a>
+            </div>
+          </article>
+        </div>  
+      </section> 
+    </div>
+  </main> 
+{% endblock %}
