changed urls to url_for, changes images file structure

--- a/app/templates/argentina.html
+++ b/app/templates/argentina.html
@@ -12,30 +12,30 @@
         <div class="row">
           <div class="col-12">      
             <figure>      
-              <img src="../../images/argentina/argentina_parque.jpeg" alt="Gorgeous Centenario Parque">
+              <img src="{{ url_for('static', filename='images/argentina_parque.jpeg') }}" alt="Gorgeous Centenario Parque">
               <figcaption>A view of Centenario Parque</figcaption> 
             </figure> 
             <p>I visited Argentina with a friend who has family in Buenos Aires. My friend's cousin lives in an apartment in the Caballito neighborhood,
               right next to the Parque Centenario. Since we went in October, it was spring in Argentina and lots of people would sit on the grass
               in the park and drink matte.</p>
             <figure> 
-              <img src="../../images/argentina/argentina_jacaranda.jpeg" alt="Jacaranda - tree with purple flowers">
+              <img src="{{ url_for('static', filename='images/argentina_jacaranda.jpeg') }}" alt="Jacaranda - tree with purple flowers">
               <figcaption>A Jacaranda tree</figcaption>
             </figure> 
             <p>Our first few days in Buenos Aires centered on getting to know the lay of the land. We visited many neighborhoods, like Microcentro, Recoleta,
               and La Boca. The city is gorgeous and has Jacaranda trees all over the place.</p> 
             <figure class="side-side"> 
-              <img src="../../images/argentina/argentina_la_boca.jpeg" alt="Colorful La Boca street, Buenos Aires">
-              <img src="../../images/argentina/argentina_casa_rosada.jpeg" alt="Casa Rosada, Buenos Aires">
-              <img src="../../images/argentina/argentina_recoleta.jpeg" alt="La Recoleta - famous cemetery">
+              <img src="{{ url_for('static', filename='images/argentina_la_boca.jpeg') }}" alt="Colorful La Boca street, Buenos Aires">
+              <img src="{{ url_for('static', filename='images/argentina_casa_rosada.jpeg') }}" alt="Casa Rosada, Buenos Aires">
+              <img src="{{ url_for('static', filename='images/argentina_recoleta.jpeg') }}" alt="La Recoleta - famous cemetery">
               <figcaption>From left to right: La Boca, Casa Rosada, Recoleta cemetary</figcaption>
             </figure>   
             <p>La Boca has the colorful Caminito, Microcentro has numerous buildings of note, like Casa Rosada (housing the office of the President), and 
               Recoleta has not only an awesome museum of waterworks (Palacio de las Aguas) but also the famous Recoleta cemetary, with mausoleums for such famous
               people as Eva Peron!</p> 
             <figure class="side-side"> 
-              <img src="../../images/argentina/argentina_el_ateneo.jpeg" alt="El Ateneo bookstore, Buenos Aires">
-              <img src="../../images/argentina/argentina_el_tigre.jpeg" alt="A typical El Tigre home">  
+              <img src="{{ url_for('static', filename='images/argentina_el_ateneo.jpeg') }}" alt="El Ateneo bookstore, Buenos Aires">
+              <img src="{{ url_for('static', filename='images/argentina_el_tigre.jpeg') }}" alt="A typical El Tigre home">  
               <figcaption>On the left, an image of inside of El Ateneo. On right, image of a typical El Tigre home on the water</figcaption> 
             </figure> 
             <p>Our last few days in Argentina were spent basking in sun at El Tigre (where I also gorged on steak and fries) and visiting El Ateneo, the 
