--- a/app/templates/france.html
+++ b/app/templates/france.html
@@ -12,7 +12,7 @@
         <div class="row">       
           <div class="col-12">
             <figure> 
-              <img src="../../images/france/france_mont_saint_michel.jpeg" alt="Mont Saint Michel">
+              <img src="{{ url_for('static', filename='images/france_mont_saint_michel.jpeg') }}" alt="Mont Saint Michel">
               <figcaption>The magical Mont Saint Michel.</figcaption>
             </figure>
             <p>I spent 7 months in Saint-L&ocirc;, a small town in Normandy, after college. I studied French in school,
@@ -22,22 +22,22 @@
               For example, my French friends took me all over Normandy and Brittany. In Normandy, I visited a bunch of towns, like Caen 
               and Chersbourg, but the most memorable site for me was Saint Mont Michel, which is like a disney castle on an island.</p> 
             <figure class="side-side"> 
-              <img src="../../images/france/france_carnac.jpeg" alt="Stones of Carnac, Brittany">
-              <img src="../../images/france/france_granville.jpeg" alt="Lighthouse of Granville">
+              <img src="{{ url_for('static', filename='images/france_carnac.jpeg') }}" alt="Stones of Carnac, Brittany">
+              <img src="{{ url_for('static', filename='images/france_granville.jpeg') }}" alt="Lighthouse of Granville">
               <figcaption>Carnac on the left, Granville lighthouse on right.</figcaption>
             </figure> 
             <p>In Brittany, I got to see a megalithic site called Carnac and visied Granville. I was blown away by Granville, as it 
               is a gorgeous coastal town with an adorable lighthouse. I wouldn't mind living there at all! </p>
             <figure> 
-              <img src="../../images/france/france_eglise.jpeg" alt="Church in Saint Lo, Normandy">
+              <img src="{{ url_for('static', filename='images/france_eglise.jpeg') }}" alt="Church in Saint Lo, Normandy">
               <figcaption>The historic Roman Catholic church in Saint-L&ocirc;.</figcaption>
             </figure> 
             <p>Saint-L&ocirc; itself was a place I easily grew to love. It was rich in history (as was the entire region of Normandy). 
               For example, its church, the &Eacute;glise Notre-Dame, was devastated by bombs during WWII and still has scars. People in Normandy 
               still spoke about WWII and it was something I found myself talking about more often than expected.</p> 
             <figure class="side-side">     
-              <img src="../../images/france/france_eiffel.jpeg" alt="Eiffel Tower at night">
-              <img src="../../images/france/france_louvre.jpeg" alt="Louvre Pyramid">
+              <img src="{{ url_for('static', filename='images/france_eiffel.jpeg') }}" alt="Eiffel Tower at night">
+              <img src="{{ url_for('static', filename='images/france_louvre.jpeg') }}" alt="Louvre Pyramid">
               <figcaption>The sites of Paris - Eiffel Tower and the Louvre.</figcaption>
             </figure> 
             <p>While in France I of course visited Paris a number of times! I took in all the requisite sites, but the Eiffel
