--- a/app/templates/netherlands.html
+++ b/app/templates/netherlands.html
@@ -12,21 +12,21 @@
         <div class="row">
           <div class="col-12">
             <figure> 
-              <img src="../../images/netherlands/netherlands_i_am.jpeg" alt="I am Amsterdam sign">
+              <img src="{{ url_for('static', filename='images/netherlands_i_am.jpeg') }}" alt="I am Amsterdam sign">
               <figcaption>The famous "I AM AMSTERDAM" sculpture</figcaption>
             </figure>
             <p>I went to the Netherlands right after my trip to Berlin. I went with the same friend who was with me in Berlin,
               and we both liked Amsterdam better. Our first few days were spent walking around Amsterdam and eating a lot of 
               stroopwafel.</p>
             <figure class="side-side"> 
-              <img src="../../images/netherlands/netherlands_canals.jpeg" alt="Canals of Amsterdam">
-              <img src="../../images/netherlands/netherlands_dam.jpeg" alt="Dam Plaza, Amsterdam">
+              <img src="{{ url_for('static', filename='images/netherlands_canals.jpeg') }}" alt="Canals of Amsterdam">
+              <img src="{{ url_for('static', filename='images/netherlands_dam.jpeg') }}" alt="Dam Plaza, Amsterdam">
               <figcaption>From left: Canals of Amerterdam at night and Dam Plaza</figcaption>
             </figure>
             <p>Dam Plaza was fun to visit, especially since we went shopping at De Bijenkorf. We honeslty just walked around and had 
               fun. It was especially beautiful at night.</p> 
             <figure> 
-              <img src="../../images/netherlands/netherlands_kinderdijk.jpeg" alt="Windmills of Kinderdijk"> 
+              <img src="{{ url_for('static', filename='images/netherlands_kinderdijk.jpeg') }}" alt="Windmills of Kinderdijk"> 
               <figcaption>Windmills of Kinderdijk</figcaption>
             </figure>
             <p>Other than Amsterdam, the windmills of Kinderdijk  was another one of our destinations and it was really a cute trip!</p>
