--- a/app/templates/canada.html
+++ b/app/templates/canada.html
@@ -12,21 +12,21 @@
         <div class="row">
           <div class="col-12"> 
             <figure> 
-              <img src="../../images/canada/canada_cn_tower.jpeg" alt="CN Tower, Toronto">
+              <img src="{{ url_for('static', filename='images/canada_cn_tower.jpeg') }}" alt="CN Tower, Toronto">
               <figcaption>A view of CN Tower</figcaption>
             </figure> 
             <p>I have spent many summers in Canada, as I have extensive family there on both coasts. One of my earliest memories 
               is of stepping onto the glass floor at CN Tower - I remember being frightened but also thrilled!</p> 
             <figure class="side-side"> 
-              <img src="../../images/canada/canada_stanley_park.jpeg" alt="Totem Poles at Stanley Park, Vancouver">
-              <img src="../../images/canada/canada_vancouver_skyline.jpeg" alt="Vancouver skyline">
+              <img src="{{ url_for('static', filename='images/canada_stanley_park.jpeg') }}" alt="Totem Poles at Stanley Park, Vancouver">
+              <img src="{{ url_for('static', filename='images/canada_vancouver_skyline.jpeg') }}" alt="Vancouver skyline">
               <figcaption>At left, Totel Poles in Stanley park. At right, view of Vancouver skyline.</figcaption>
             </figure> 
             <p>When not in Toronto, I was passing time in Vancouver. My grandparents lived nearby in Abbotsford, which was for all intents and purposes a 
               mini-Punjab. Since it was a rural area near farmland, it was also pretty chill. Still, it was always nice to go back to 
               family in Vancouver and get reconnected with the rest of the world!</p> 
             <figure> 
-              <img src="../../images/canada/canada_mont_tremblant.jpeg" alt="Mountains in Quebec, Mont Tremblant">
+              <img src="{{ url_for('static', filename='images/canada_mont_tremblant.jpeg') }}" alt="Mountains in Quebec, Mont Tremblant">
               <figcaption>The countryside at Mont Tremblant.</figcaption>
             </figure> 
             <p>I would love to visit other parts of Canada, like Nova Scotia. I have been lucky enough to go to the Mont Tremblant resort
