--- a/app/templates/greece.html
+++ b/app/templates/greece.html
@@ -12,7 +12,7 @@
         <div class="row">
           <div class="col-12">
             <figure>  
-              <img src="../../images/greece/greece_mills.jpeg" alt="Classic windmills, Rhodes">
+              <img src="{{ url_for('static', filename='images/greece_mills.jpeg') }}" alt="Classic windmills, Rhodes">
               <figcaption>Classic stone windmills in Rhodes.</figcaption>
             </figure>
             <p>I went to Greece while I was studying abroad in Italy. I went on my own to the island of
@@ -21,15 +21,15 @@
                 there was to see in about 2 days, I spent the next 3 bored out of my mind. Still, I'm glad I went
                 and had the experience. After all, I learned how to not travel!</p> 
             <figure class="side-side">
-              <img src="../../images/greece/greece_mosque.jpeg" alt="Mosque in old town of Rhodes">
-              <img src="../../images/greece/greece_palace.jpeg" alt="Palace of the Grand Master of the Knights of Rhodes">
+              <img src="{{ url_for('static', filename='images/greece_mosque.jpeg') }}" alt="Mosque in old town of Rhodes">
+              <img src="{{ url_for('static', filename='images/greece_palace.jpeg') }}" alt="Palace of the Grand Master of the Knights of Rhodes">
               <figcaption>Old Town, left to right: Mosque and Palace.</figcaption>
             </figure> 
             <p>I visited the Old Town neighborhood, which had the really cool Palace of the Grand Master of the 
                 Knights of Rhodes and the really old Turkish mosque known as the Suleymaniye Mosque.</p>
             <figure class="side-side">
-              <img src="../../images/greece/greece_acropolis_1.jpeg" alt="Acropolis on island of Rhodes">
-              <img src="../../images/greece/greece_acropolis_2.jpeg" alt="Acropolis on island of Rhodes">
+              <img src="{{ url_for('static', filename='images/greece_acropolis_1.jpeg') }}" alt="Acropolis on island of Rhodes">
+              <img src="{{ url_for('static', filename='images/greece_acropolis_2.jpeg') }}" alt="Acropolis on island of Rhodes">
               <figcaption>Acropolis of Rhodes.</figcaption>
             </figure> 
             <p>My other adventures in Rhodes led me to the Acropolis  and to a really small aquarium at the tip of the island. 
