--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,8 +12,8 @@
         <div class="row">
           <article>
             <div class="col-12">
-              <a href="html/india/index.html">
-                <img src="images/india/india_golden_temple.jpeg" alt="Golden Temple in India">
+              <a href="{{ url_for('india') }}">
+                <img src="{{ url_for('static', filename='images/india_golden_temple.jpeg') }}" alt="Golden Temple in India">
                 <h3>India</h3> 
               </a>
             </div>
@@ -29,24 +29,24 @@
         <div class="row">      
           <article>       
             <div class="col-4">
-              <a href="html/argentina/index.html">
-                <img src="images/argentina/argentina_la_boca.jpeg" alt="La Boca Neighborhood in Buenos Aires">
+              <a href="{{ url_for('argentina') }}">
+                <img src="{{ url_for('static', filename='images/argentina_la_boca.jpeg') }}" alt="La Boca Neighborhood in Buenos Aires">
                 <h3>Argentina</h3>
               </a>
             </div>
           </article>
           <article>   
             <div class="col-4"> 
-              <a href="html/canada/index.html">
-                <img src="images/canada/canada_vancouver_skyline.jpeg" alt="Vancouver Skyline">
+              <a href="{{ url_for('canada') }}">
+                <img src="{{ url_for('static', filename='images/canada_vancouver_skyline.jpeg') }}" alt="Vancouver Skyline">
                 <h3>Canada</h3>
               </a>
             </div>
           </article>
           <article>
             <div class="col-4">
-              <a href="html/uruguay/index.html">
-                <img src="images/uruguay/uruguay_plaza_independencia.jpeg" alt="Plaza Independencia in Montevideo, Uruguay">
+              <a href="{{ url_for('uruguay') }}">
+                <img src="{{ url_for('static', filename='images/uruguay_plaza_independencia.jpeg') }}" alt="Plaza Independencia in Montevideo, Uruguay">
                 <h3>Uruguay</h3>
               </a>
             </div> 
@@ -62,24 +62,24 @@
         <div class="row">
           <article>
             <div class="col-4">
-              <a href="html/france/index.html">
-                <img src="images/france/france_eiffel.jpeg" alt="Eiffel Tower">
+              <a href="{{ url_for('france') }}">
+                <img src="{{ url_for('static', filename='images/france_eiffel.jpeg') }}" alt="Eiffel Tower">
                 <h3>France</h3>
               </a>
             </div>  
           </article>
           <article>
             <div class="col-4">  
-              <a href="html/germany/index.html">
-                <img src="images/germany/germany_brandenburg_gate.jpeg" alt="Brandenburg Gate in Berlin">
+              <a href="{{ url_for('germany') }}">
+                <img src="{{ url_for('static', filename='images/germany_brandenburg_gate.jpeg') }}" alt="Brandenburg Gate in Berlin">
                 <h3>Germany</h3>
               </a>
             </div>
           </article>
           <article>  
             <div class="col-4"> 
-              <a href="html/greece/index.html">
-                <img src="images/greece/greece_acropolis_1.jpeg" alt="Image of Acropolis in Rhodes, Greece">
+              <a href="{{ url_for('greece') }}">
+                <img src="{{ url_for('static', filename='images/greece_acropolis_1.jpeg') }}" alt="Image of Acropolis in Rhodes, Greece">
                 <h3>Greece</h3>
               </a>
             </div>
@@ -88,24 +88,24 @@
         <div class="row"> 
           <article>
             <div class="col-4">     
-              <a href="html/ireland/index.html">
-                <img src="images/ireland/ireland_guinness_copy.jpeg" alt="Image of Guinness factory in Dublin">
+              <a href="{{ url_for('ireland') }}">
+                <img src="{{ url_for('static', filename='images/ireland_guinness_copy.jpeg') }}" alt="Image of Guinness factory in Dublin">
                 <h3>Ireland</h3>
               </a>
             </div>
           </article>  
           <article> 
             <div class="col-4">
-              <a href="html/italy/index.html">
-                <img src="images/italy/italy_pisa.jpeg" alt="Leaning tower of Pisa">
+              <a href="{{ url_for('italy') }}">
+                <img src="{{ url_for('static', filename='images/italy_pisa.jpeg') }}" alt="Leaning tower of Pisa">
                 <h3>Italy</h3>
               </a>
             </div>
           </article>
           <article>   
             <div class="col-4"> 
-              <a href="html/netherlands/index.html">
-                <img src="images/netherlands/netherlands_kinderdijk.jpeg" alt="Windmills of Kinderdijk, in Holland">
+              <a href="{{ url_for('netherlands') }}">
+                <img src="{{ url_for('static', filename='images/netherlands_kinderdijk.jpeg') }}" alt="Windmills of Kinderdijk, in Holland">
                 <h3>The Netherlands</h3>
               </a>
             </div>
@@ -114,16 +114,16 @@
         <div class="row"> 
           <article>
             <div class="col-4"> 
-              <a href="html/spain/index.html">
-                <img src="images/spain/spain_sagrada_familia_1.jpeg" alt="Sagrada Familia in Barcelona">
+              <a href="{{ url_for('spain') }}">
+                <img src="{{ url_for('static', filename='images/spain_sagrada_familia_1.jpeg') }}" alt="Sagrada Familia in Barcelona">
                 <h3>Spain</h3>
               </a>
             </div>
           </article>
           <article> 
             <div class="col-4">   
-              <a href="html/uk/index.html">
-                <img src="images/uk/uk_tower_bridge.jpeg" alt="Tower Bridge in London">
+              <a href="{{ url_for('uk') }}">
+                <img src="{{ url_for('static', filename='images/uk_tower_bridge.jpeg') }}" alt="Tower Bridge in London">
                 <h3>United Kingdom</h3>
               </a> 
             </div>
@@ -139,8 +139,8 @@
         <div class="row">
           <article>
             <div class="col-4"> 
-              <a href="html/egypt/index.html">
-                <img src="images/egypt/egypt_pyramid_copy.jpeg" alt="Pyramids of Giza">
+              <a href="{{ url_for('egypt') }}">
+                <img src="{{ url_for('static', filename='images/egypt_pyramid_copy.jpeg') }}" alt="Pyramids of Giza">
                 <h3>Egypt</h3>
               </a>
             </div>
