--- a/app/templates/ireland.html
+++ b/app/templates/ireland.html
@@ -12,7 +12,7 @@
         <div class="row">
           <div class="col-12">
             <figure> 
-              <img src="../../images/ireland/ireland_guinness.jpeg" alt="Guinness Factory">
+              <img src="{{ url_for('static', filename='images/ireland_guinness.jpeg') }}" alt="Guinness Factory">
               <figcaption>Entrance to Guinness Factory!</figcaption>
             </figure>
             <p>I went to Ireland while studying abroad in Italy. I mostly stayed in Dublin, venturing out to see
@@ -20,16 +20,16 @@
               which was confusing at first. It was really fun to vist the Guinness Factory and get tipsy in the middle
               of the day. It was also really fun to do a pub crawl and meet other tourists enjoying the city.</p> 
             <figure class="side-side">
-              <img src="../../images/ireland/ireland_st_stephens.jpeg" alt="Feeding Swan, St. Stephens Green">
-              <img src="../../images/ireland/ireland_gaol.jpeg" alt="Kilmainham Gaol staircase">
+              <img src="{{ url_for('static', filename='images/ireland_st_stephens.jpeg') }}" alt="Feeding Swan, St. Stephens Green">
+              <img src="{{ url_for('static', filename='images/ireland_gaol.jpeg') }}" alt="Kilmainham Gaol staircase">
               <figcaption>Two different things to do in Dublin - feed swan or visit a prison!</figcaption>
             </figure> 
             <p>Though I also got to visit Dublin Spire and Kilmainham Gaol (which was interesting as it was depressing), 
               St. Stephen's Green was the site that really left an impression on me. It was just so pretty, with huge 
               swan that people could feed! </p> 
             <figure class="side-side">
-              <img src="../../images/ireland/ireland_howth_1.jpeg" alt="Coastline, Howth">
-              <img src="../../images/ireland/ireland_howth_2.jpeg" alt="Coastline, Howth">
+              <img src="{{ url_for('static', filename='images/ireland_howth_1.jpeg') }}" alt="Coastline, Howth">
+              <img src="{{ url_for('static', filename='images/ireland_howth_2.jpeg') }}" alt="Coastline, Howth">
               <figcaption>Behold the beauty of Howth!</figcaption>
             </figure> 
             <p> I also really liked Howth, which I found to be beautiful. I really wish I could have seen more of the Irish
