--- a/app/templates/uk.html
+++ b/app/templates/uk.html
@@ -12,27 +12,27 @@
         <div class="row">
           <div class="col-12">
             <figure> 
-              <img src="../../images/uk/uk_tower_bridge.jpeg" alt="Tower Bridge, London">
+              <img src="{{ url_for('static', filename='images/uk_tower_bridge.jpeg') }}" alt="Tower Bridge, London">
               <figcaption>My favorite site in London - Tower Bridge</figcaption>
             </figure>
             <p>If you know me, you know I am a bit of an Anglophile. I LOVE British television. I would honestly love 
                 to one day live in London. I have been to London a few times, and the Tower Bridge is my favorite site. 
                 I just had a really good day when we visited, and so I always think of it fondly!</p>
             <figure> 
-              <img src="../../images/uk/uk_brighton.jpeg" alt="The beach, Brighton, England">
+              <img src="{{ url_for('static', filename='images/uk_brighton.jpeg') }}" alt="The beach, Brighton, England">
               <figcaption>The beach in Brighton</figcaption>
             </figure>
             <p> The last time I went to the UK, however, we focused on places other than London. I went down to Brighton, where I would 
               also love to live, it's such a pleasant place!</p> 
             <figure> 
-              <img src="../../images/uk/uk_liverpool.jpeg" alt="Liverpool's Crosby Beach, with sculpture'">
+              <img src="{{ url_for('static', filename='images/uk_liverpool.jpeg') }}" alt="Liverpool's Crosby Beach, with sculpture'">
               <figcaption>The beautiful Crosby Beach, Liverpool.</figcaption>
             </figure>
             <p>We also went further north and visited Liverpool, where I was bowled over
               by the sculpture "Another Place" installed at Crosby Beach. We visited the beach after the sun had just set, 
               and it was something to behold. I would love to visit again and again at different times of the day.</p>
             <figure> 
-              <img src="../../images/uk/uk_balmoral_hotel_1.jpeg" alt="Balmoral Hotel">
+              <img src="{{ url_for('static', filename='images/uk_balmoral_hotel_1.jpeg') }}" alt="Balmoral Hotel">
               <figcaption>Balmoral Hotel in Edinburgh</figcaption>
             </figure>
             <p>From Liverpool, we went further north to Scotland. I got to visit Glasgow and Edinburgh, which is one of the prettiest cities I have
