--- a/app/templates/uruguay.html
+++ b/app/templates/uruguay.html
@@ -12,8 +12,8 @@
         <div class="row">
           <div class="col-12"> 
             <figure class="side-side">
-              <img src="../../images/uruguay/uruguay_green_building.jpeg" alt="A cool green building">
-              <img src="../../images/uruguay/uruguay_bench.jpeg" alt="Cool bench in Colonia del Sacramento">
+              <img src="{{ url_for('static', filename='images/uruguay_green_building.jpeg') }}" alt="A cool green building">
+              <img src="{{ url_for('static', filename='images/uruguay_bench.jpeg') }}" alt="Cool bench in Colonia del Sacramento">
               <figcaption>Uruguay had interesting architecture - check out this green builing and this bench!</figcaption>
             </figure> 
             <p>We went to Uruguay when we went to Argentina, since they border each other. Uruguay may be small,
@@ -21,13 +21,13 @@
               the capital. Colonia del Sacramento had a bunch of buildings that were unlike anything I'd seen before - 
               even the benches in Colonia were interesting!</p> 
             <figure> 
-              <img src="../../images/uruguay/uruguay_calle_de_los_suspiros.jpeg" alt="Calle de los Suspiros, Colonia del Sacramento">
+              <img src="{{ url_for('static', filename='images/uruguay_calle_de_los_suspiros.jpeg') }}" alt="Calle de los Suspiros, Colonia del Sacramento">
               <figcaption>Calle de los Suspiros</figcaption>
             </figure>
             <p>Calle de los Suspiros attracted a lot of tourists and I could see why - there was something romantic 
               about it!</p>  
             <figure> 
-              <img src="../../images/uruguay/uruguay_plaza_independencia.jpeg" alt="Plaza Independencia, Montevideo">
+              <img src="{{ url_for('static', filename='images/uruguay_plaza_independencia.jpeg') }}" alt="Plaza Independencia, Montevideo">
               <figcaption>Plaza Independencia in Montevideo</figcaption>
             </figure>
             <p>In Montevideo, we walking all over the place and checked out Plaza Independencia. All in all, a nice 
