--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,8 +10,12 @@
       <div class="container">
         <a href="{{ url_for('index') }}" class="title"> My Travels</a>
         <ul>
+          {% if title != 'About' %}
           <li><a href="{{ url_for('about') }}">About</a></li>
+          {% endif %}
+          {% if title != 'Contact' %}
           <li><a href="{{ url_for('contact') }}">Contact</a></li>
+          {% endif %}
         </ul> 
       </div> 
     </header> 
@@ -19,8 +23,12 @@
     <footer>
       <div class="footer">
         <ul>
+          {% if title != 'About' %}
           <li><a href="{{ url_for('about') }}">About</a></li>
+          {% endif %}
+          {% if title != 'Contact' %}
           <li><a href="{{ url_for('contact') }}">Contact</a></li>
+          {% endif %}
         </ul>  
       </div> 
     </footer>
