--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,6 +19,15 @@
         </ul> 
       </div> 
     </header> 
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul class="message-ul">
+        {% for message in messages %}
+        <li class="message-li">{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
     {% block content %} {% endblock %}
     <footer>
       <div class="footer">
