--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -8,19 +8,35 @@
           <h2>Contact Me!</h2> 
         </div>
       </div> 
-      <form>
-        <div class="row">
-          <div class="col-12"> 
-            <label for="question-comment"></label>
-            <textarea id="question-comment" placeholder="Questions/Comments"></textarea>
-            <label for="email"></label>
-            <input type="email" id="email" placeholder="Email">
-            <label for="name"></label>
-            <input type="text" id="name" placeholder="Name">
-            <input type="submit" value="Click to Submit">
-          </div>
-        </div> 
-      </form>
+      <div class="row">
+        <div class="col-12"> 
+          <form action="" method="post">
+            {{ form.hidden_tag() }}
+            <p> 
+              {{ form.text(cols="40", rows="10") }}<br>
+              {{ form.text.label }}<br>
+              {% for error in form.text.errors %}
+              <span class="error">[{{ error }}]</span>
+              {% endfor %}
+            </p>
+            <p>
+              {{ form.email(size=32) }}<br>
+              {{ form.email.label }}<br>
+              {% for error in form.email.errors %}
+              <span class="error">[{{ error }}]</span>
+              {% endfor %}
+            </p>
+            <p>
+              {{ form.name(size=32) }}<br>
+              {{ form.name.label }}<br>
+              {% for error in form.name.errors %}
+              <span class="error">[{{ error }}]</span>
+              {% endfor %}
+            </p>
+            <p>{{ form.submit() }}</p>
+          </form>
+        </div>
+      </div> 
     </div>       
   </main> 
 {% endblock %}
