--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
   </head>
-  <body>
+  <body class="font">
     <header>
       <div class="container">
         <a href="{{ url_for('index') }}" class="title"> My Travels</a>
         <ul>
           {% if title != 'About' %}
-          <li><a href="{{ url_for('about') }}">About</a></li>
+          <li class="fontawesome-plus"><a href="{{ url_for('about') }}">About</a></li>
           {% endif %}
           {% if title != 'Contact' %}
-          <li><a href="{{ url_for('contact') }}">Contact</a></li>
+          <li class="fontawesome-envelope"><a href="{{ url_for('contact') }}">Contact</a></li>
           {% endif %}
         </ul> 
       </div> 
@@ -34,10 +34,10 @@
       <div class="footer">
         <ul>
           {% if title != 'About' %}
-          <li><a href="{{ url_for('about') }}">About</a></li>
+          <li class="fontawesome-plus"><a href="{{ url_for('about') }}">About</a></li>
           {% endif %}
           {% if title != 'Contact' %}
-          <li><a href="{{ url_for('contact') }}">Contact</a></li>
+          <li class="fontawesome-envelope"><a href="{{ url_for('contact') }}">Contact</a></li>
           {% endif %}
         </ul> 
       </div> 
